--- a/index.css
+++ b/index.css
@@ -28,5 +28,7 @@ html, body {
     font-weight: bold;
     font-size: 3em;
     
-    transform: rotate(-2deg);
+    transform: rotate(-5deg);
 }
+
+#notice span i { text-shadow: none; }
